--- a/style.css
+++ b/style.css
@@ -13,7 +13,41 @@ body{
 
 .genius{
     display: grid;
-    grid-template-areas:'blue yellow'
-    'red green';
+    grid-template-areas:'azul amarelo'
+    'vermelho verde';
     grid-gap: 10px;
+    border: 1px solid whitesmoke;
+    background-color: white;
+    border-radius: 100%;
+    width: 700px;
+    height: 700px;
 }
+
+.blue{
+    grid-area:azul;
+    background-color: blue;
+    border-top-left-radius: 100%;
+}
+
+.yellow{
+    
+        grid-area:amarelo;
+        background-color: yellow;
+        border-top-right-radius: 100%;
+}
+
+.red{
+        grid-area:vermelho;
+        background-color: red;
+        border-bottom-left-radius: 100%;
+    }
+
+.green{
+        grid-area:verde;
+        background-color: green;
+        border-bottom-right-radius: 100%;
+      }
+
+      .selected{
+          opacity: 0.8%;
+      }
